[package]
name = "poor_mans_obd"
version = "0.1.0"
edition = "2021"

[dependencies]
ocrs = "0.10.3"
rten = { version = "0.18.0" }
rten-imageproc = { version = "0.18.0" }
rten-tensor = { version = "0.18.0" }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
infer = "0.7"
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
libmdns = "0.2"
serialport = { version = "4", default-features = false }
chrono = "0.4"